--- a/Resources/Prototypes/Entities/Objects/clown_horn.yml
+++ b/Resources/Prototypes/Entities/Objects/clown_horn.yml
@@ -7,5 +7,11 @@
   - type: Sprite
     sprite: Objects/Fun/bikehorn.rsi
     state: icon
+  - type: Slippery
+    paralyzeTime: 5
+    launchForwardsMultiplier: 9.0
+  - type: StepTrigger
   - type: PlaySoundOnUse
+    sound: /Audio/Items/bikehorn.ogg
+  - type: HonkOnStep
     sound: /Audio/Items/bikehorn.ogg
